FIX: When editing a todo-item, the item-actions toolbar is ALWAYS visible

--- a/todo-localstorage/styles.css
+++ b/todo-localstorage/styles.css
@@ -169,6 +169,10 @@ label, h3 {
     border-radius: var(--min-radius);
 }
 
+.visible {
+    opacity: 1 !important;
+}
+
 /* RESPONSIVE */
 
 @media (hover) {
